<resources>
    <string name="app_name">MDP</string>
    <string name="assignment2">Assignment2</string>
    <string name="assignment3">Assignment3</string>
    <string name="assignment4">Assignment4</string>
    <string name="assignment5">Assignment5</string>
    <string name="university_name">Maharishi International University</string>
    <string name="assignment2_set_background">SetBackground</string>
    <string name="sign_in_title">Sign in to your account</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_forgot_password">Forgot password?</string>
    <string name="sign_in_don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_email_address_required">Email address (required)</string>
    <string name="sign_in_password_required">Password (required)</string>
    <string name="sign_in_create_a_new_account">Create a new account</string>
    <string name="shopping_title">Shop by Categories</string>
    <string name="shopping_category_books">Books</string>
    <string name="shopping_category_clothing">Clothing</string>
    <string name="shopping_category_organic_foods">Organic Foods</string>
    <string name="shopping_category_organic_drinks">Organic Drinks</string>
    <string name="shopping_category_medicines">Medicines</string>
    <string name="shopping_welcome_user">Welcome %s</string>
    <string name="shopping_category_chosen">You have chosen the %s category of shopping</string>
    <string name="register_title">Create your account</string>
    <string name="register_required_field">* required field</string>
    <string name="register_first_name">First name*</string>
    <string name="register_last_name">Last name*</string>
    <string name="register_email">Email address*</string>
    <string name="register_create_account">Create Account</string>
    <string name="register_password">Password*</string>
    <string name="calculator_first_number">First Number</string>
    <string name="calculator_result">Result</string>
    <string name="quiz_title">Kotlin Fundamentals knowledge</string>
    <string name="quiz_question_1">Question 1: What is the default visibility modifier in Kotlin?</string>
    <string name="quiz_question_1_answer_1">public</string>
    <string name="quiz_question_1_answer_2">private</string>
    <string name="quiz_question_1_answer_3">internal</string>
    <string name="quiz_question_2">Question 2: Which of the following data types are the basic data types in Kotlin?</string>
    <string name="quiz_question_2_answer_1">Int</string>
    <string name="quiz_question_2_answer_2">Float</string>
    <string name="quiz_question_2_answer_3">Array</string>
    <string name="quiz_submit">Submit</string>
    <string name="quiz_reset">Reset</string>
    <string name="quiz_msg_submitted">Congratulations! You submitted on %s, Your achieved %s</string>
    <string name="OK">OK</string>
    <string name="product_price">$%.2f</string>
    <string name="product_detail_key_benefits">Key Benefits:</string>
    <string-array name="books">
        <item>Maharishi</item>
        <item>Dr Tony Nader</item>
        <item>Scientific Research Consciousness, Knowledge and Enlightenment</item>
        <item>Modern Science and Vedic Science</item>
        <item>Book Series</item>
        <item>Other Authors</item>
        <item>Clearance</item>
    </string-array>
</resources>