<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".assignment5.problem1.QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_16dp">

        <TextView
            android:id="@+id/tv_question_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quiz_title"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/quiz_question_1"
            android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

        <RadioGroup
            android:id="@+id/rg_question_1_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp">

            <RadioButton
                android:id="@+id/rb_question_1_answer_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz_question_1_answer_1" />

            <RadioButton
                android:id="@+id/rb_question_1_answer_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz_question_1_answer_2" />

            <RadioButton
                android:id="@+id/rb_question_1_answer_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz_question_1_answer_3" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_question_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/quiz_question_2"
            android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

        <CheckBox
            android:id="@+id/cb_question_2_answer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_question_2_answer_1" />

        <CheckBox
            android:id="@+id/cb_question_2_answer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_question_2_answer_2" />

        <CheckBox
            android:id="@+id/cb_question_2_answer_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_question_2_answer_3" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_8dp"
            android:onClick="submit"
            android:text="@string/quiz_submit" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_8dp"
            android:onClick="reset"
            android:text="@string/quiz_reset" />
    </LinearLayout>
</ScrollView>
