<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_assignment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/assignment2"
        android:onClick="startAssignment2"
        android:textAllCaps="false" />

    <Button
        android:onClick="startAssignment3"
        android:id="@+id/btn_assignment3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/assignment3"
        android:textAllCaps="false" />

    <Button
        android:onClick="startAssignment4"
        android:id="@+id/btn_assignment4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/assignment4"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_assignment5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="startAssignment5"
        android:text="@string/assignment5"
        android:textAllCaps="false" />

</LinearLayout>