<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16dp"
        tools:ignore="ContentDescription,Autofill,LabelFor">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_miulogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:gravity="center"
            android:text="@string/register_title"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            app:layout_constraintTop_toBottomOf="@+id/img_logo" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_size"
            android:layout_marginTop="@dimen/margin_12dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_required_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_12dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/register_required_field"
            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
            app:layout_constraintTop_toBottomOf="@+id/view_divider" />

        <TextView
            android:id="@+id/tv_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_12dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/register_first_name"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            app:layout_constraintTop_toBottomOf="@+id/tv_required_field" />

        <EditText
            android:id="@+id/edt_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2dp"
            android:background="@drawable/bg_rectangle"
            android:inputType="textCapSentences"
            android:padding="@dimen/padding_12dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_first_name" />

        <TextView
            android:id="@+id/tv_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_12dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/register_last_name"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            app:layout_constraintTop_toBottomOf="@+id/edt_first_name" />

        <EditText
            android:id="@+id/edt_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2dp"
            android:background="@drawable/bg_rectangle"
            android:inputType="textCapSentences"
            android:padding="@dimen/padding_12dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_last_name" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_12dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/register_email"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            app:layout_constraintTop_toBottomOf="@+id/edt_last_name" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2dp"
            android:background="@drawable/bg_rectangle"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_12dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_12dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/register_password"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2dp"
            android:background="@drawable/bg_rectangle"
            android:inputType="textPassword"
            android:padding="@dimen/padding_12dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/register_create_account"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
