<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:text="Welcome tim@miu.edu"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:gravity="center"
        android:text="@string/shopping_title"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <ImageView
        android:id="@+id/img_books"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:src="@drawable/ic_books"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/img_clothing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_books"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/shopping_category_books"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        app:layout_constraintEnd_toEndOf="@+id/img_books"
        app:layout_constraintStart_toStartOf="@+id/img_books"
        app:layout_constraintTop_toBottomOf="@+id/img_books" />

    <ImageView
        android:id="@+id/img_clothing"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:src="@drawable/ic_clothing"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_books"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_clothing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:gravity="center"
        android:text="@string/shopping_category_clothing"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        app:layout_constraintEnd_toEndOf="@+id/img_clothing"
        app:layout_constraintStart_toEndOf="@+id/tv_books"
        app:layout_constraintTop_toBottomOf="@+id/img_clothing" />

    <ImageView
        android:id="@+id/img_foods"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_36dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:src="@drawable/ic_organic_foods"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/img_medicines"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_books" />

    <TextView
        android:id="@+id/tv_foods"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/shopping_category_organic_foods"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        app:layout_constraintEnd_toEndOf="@+id/img_foods"
        app:layout_constraintStart_toStartOf="@+id/img_foods"
        app:layout_constraintTop_toBottomOf="@+id/img_foods" />

    <ImageView
        android:id="@+id/img_medicines"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_36dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:src="@drawable/ic_medicines"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_foods"
        app:layout_constraintTop_toBottomOf="@+id/tv_clothing" />

    <TextView
        android:id="@+id/tv_medicine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:gravity="center"
        android:text="@string/shopping_category_medicines"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        app:layout_constraintEnd_toEndOf="@+id/img_medicines"
        app:layout_constraintStart_toEndOf="@+id/tv_foods"
        app:layout_constraintTop_toBottomOf="@+id/img_medicines" />

</androidx.constraintlayout.widget.ConstraintLayout>